--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   grid-template-rows: 40vh 20vh 50vh 20vh 30vh 10vh;
   grid-template-columns: 50% 50%;
   font-family: monospace;
+  text-align: center;
 }
 
 .grid-header {
@@ -17,7 +18,8 @@ body {
   color: white;
 }
 
-h1 {
+h1
+h2 {
   padding: 0;
   margin: 0;
 }
@@ -40,7 +42,21 @@ h1 {
 
 .grid-section {
   grid-column: 1 / 3;
-  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+.section-columns {
+  display: flex;
+  flex-direction: row;
+}
+
+.section-columns > p {
+  margin: 10px;
 }
 
 .grid-skills {
