--- a/styles.css
+++ b/styles.css
@@ -104,5 +104,10 @@ h2 {
 
 .grid-footer {
   grid-column: 1 / 3;
-  background-color: grey;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: 1px solid rgb(50, 50, 50);
+  padding: 0;
 }
